--- a/lectures.tex
+++ b/lectures.tex
@@ -1960,9 +1960,17 @@ $\sigma_\varepsilon \sim 1 / \sqrt{N}$.
 Видно, что этот критерий в определённом смысле эквивалентен утверждению, что <<интеграл от функции
 $\sin x$ на её периоде равен нулю>>.
 
+\clearpage
+
 \subsection{Методы генерации случайных чисел с заданным распределением}
 
 \subsubsection{Rejection sampling (выборка с отклонением, или с отбраковкой)}
+
+\begin{figure}
+	\includegraphics[width=0.6\linewidth]{rejection-sampling.png}
+    \caption{\label{dots-for-monte-carlo}Rejection sampling: точки под кривой (синие) имеют
+    распределение $dN/dx = f(x)$.}
+\end{figure}
 
 Этот метод является очень простым, и в то же время имеет много общего с геометрическим методом
 Монте-Карло для вычисления интегралов. Суть его простейшего варианта в следующем. Предположим, что
@@ -1971,7 +1979,7 @@ $\sin x$ на её периоде равен нулю>>.
 вероятность попадания числа в интервал $(x, x + \Delta x)$ для $\Delta x \to 0$, должна быть
 пропорциональна $f(x)$.  Считаем, что $f(x)$ ограничена, то есть $f(x) < c$ [также очевидно, что
 $f(x)$ не может быть меньше нуля]. Тогда мы можем равномерно засеять область $x \in (a, b)$, $y \in
-(0, c)$ точками, и отбраковать (отклонить) те из них, которые окажутся над кривой $f(x)$.
+(0, c)$ случайными точками, и отбраковать (отклонить) те из них, которые окажутся над кривой $f(x)$.
 Оставшиеся точки будут иметь нужное нам распределение!
 
 Для доказательства найдём число точек, попадающих в среднем в интервал $(x, x + \Delta x)$ при
@@ -1983,11 +1991,132 @@ x$ и не будет зависеть от $x$. После отбраковки
 производить сразу же по критерию $y_j > f(x_j)$, без сохранения всех точек в какие-либо временные
 структуры.
 
+\subsubsection{Обращение $N(x)$}
+
+\begin{figure}
+	\includegraphics[width=0.6\linewidth]{inversion-of-N.png}
+    \caption{\label{dots-for-monte-carlo}Генерация случайных чисел с использованием обратной
+    функции для N(x).}
+\end{figure}
+
+Для заданного распределения $dN/dx = f(x)$ на отрезке $[a, b]$ можно ввести функцию
+\begin{equation}
+    N(x) = \int_a^x f(x') \, dx',
+\end{equation}
+при этом мы считаем, что $f(x)$ нормирована таким образом, что $N(b) = 1$. Для простоты будем
+считать, что не существует интервалов, не которых $f(x) \equiv 0$, тогда $N(x)$ --- монотонно
+растущая функция, и существует однозначная обратная функция $\tilde N(r)$ \{$r \in [0, 1]$\}
+такая, что
+\begin{equation}
+    \label{tilde_N_N}
+    \tilde N(N(x)) = x.
+\end{equation}
+
+Если $\tilde N(r)$ может быть найдена в аналитической форме, то распределение точек $x_j = \tilde
+N(r_j)$ пропорционально $f(x)$, при условии, что случайные числа $r_j$ имеют равномерное
+распределение на отрезке $[0, 1]$. Для доказательства рассмотрим бесконечно малый интервал $[r, r +
+\Delta r]$, и обозначим число точек $r_j$, попавших на этот интервал, $\Delta N$.
+Интервалу $\Delta r$ соответствует
+\begin{equation}
+    \Delta x = \tilde N(r + \Delta r) - \tilde N(r) \propto \frac{d \tilde N}{dr} \propto \left(
+    \frac{dN}{dx} \right)^{-1} = \frac{1}{f(x)},
+\end{equation}
+где мы использовали уравнение~(\ref{tilde_N_N}), продиффиренцированное по $x$.
+В силу равномерного распределения чисел $r_j$ имеем $\Delta N /
+\Delta r = \mathrm{const}$ (то есть не зависит от $r$), следовательно, $\Delta N / \Delta x \propto f(x)$, что и требовалось
+доказать.
+
+Рассмотрим пример. Пусть нам требуется сгенерировать числа, имеющие распределение $f(x) = 2 x$ на
+отрезке $[0, 1]$. В этом случае $N(x) = x^2$, и для получения точек, имеющих распределение $f$,
+нужно применить к равномерно распределённым точкам $r_j$ функцию $\tilde N(r) = r^{1/2}$. Очевидно,
+основным недостатком данного метода является невозможность нахождения в аналитической форме функции
+$\tilde N$ в большинстве случаев.
+
+\textit{Вопрос.} Какой алгоритм следует использовать для генерации псевдослучайных чисел с
+распределением (а) $f(x) = 1 / x^{1/2}$, (б) $f(x) = \cos (x^2)$, (в) $f(x) = 1 / x$  на интервале
+$(0, 1)$, а также для (г) $f(x) = \exp(-x^2)$, $x \in (-\infty, \infty)$?
+
+\subsubsection{Алгоритм Метрополиса}
+
+Во многих случаях при генерации случайных чисел с целевой функцией $dN/dx = f(x)$ ни аналитическая
+форма, ни общий вид функции $f$ не известены, кроме того, функция $f$ может содержать особенности,
+а $x$ может быть вектором многомерного пространства. Мы позже будем
+рассматривать пример, в котором $x$ есть траектория частицы (то есть лежит в пространстве функций
+--- бесконечномерном), а $f$ определяется действием (то есть некоторым интегралом от траектории).
+Очевидно, что в этом случае ни метод выборки с отбраковкой, ни тем более метод с обращением $N(x)$
+неприменимы. Тем не менее, есть простой метод, предложенный N.~Metropolis, A.~Rosenbluth,
+M.~Rosenbluth и E.~Teller в 1953 году (для краткости --- алгоритм Метрополиса), и подходящий для
+чрезвычайно широкого класса $f(x)$.
+
+В алгоритме Метрополиса последовательность случайных чисел генерируется с использованием
+цепей Марковa, то есть последовательности случайных состояний, в которой вероятность наступления
+состояния зависит от предыдущего состояния. Пусть, например, случайная величина $x$ может принимать
+два значения, $+1$ и $-1$. Однако, мы можем представить систему, в которой вероятность того или
+иного следующего состояния
+системы, $x_i$, зависит от предыдущего, $x_{i - 1}$, например, при $x_{i - 1} = -1$ вероятность
+того, что <<выпадет>> $x_i = -1$, равна $1/4$, а при $x_{i - 1} = +1$ --- $1/2$. Несмотря на такую
+зависимость вероятности состояний, последовательность
+чисел $x_0, x_1,...$ будет, очевидно, случайной.
+
+Цепи Маркова в алгоритме Метрополиса используются следующим образом. Пусть нам нужно сгенерировать
+последовательность псевдослучайных чисел, имеющих распределение $f(x)$, то есть $f(x)$ --- наша
+целевая функция (target distribution). Тогда мы выбираем (достаточно произвольно) симметричную
+функцию $g(x)$ [то есть $g(x) = g(-x)$]. Эта функция будет определять распределение кандидатов в
+$x_i$ для заданного $x_{i - 1}$, в английской литературе она часто называется proposal density или
+jumping distribution. При выборе этой функции следует учитывать, что мы должны уметь легко
+генерировать случайные числа с распределением $g$, поэтому $g$ часто выбирают довольно простой. На
+первом шаге относительно произвольно выбирается начальное значение $x_0$, затем марковская цепь
+строится так:
+\begin{enumerate}
+    \item \label{metropolis_1} С использованием распределения $g(x-x_i)$ вычисляется квазислучайное
+        число $x'$ --- кандидат для значения $x_{i + 1}$.
+    \item Вычисляется так называемое отношение принятия (acceptance ratio) $\alpha = f(x') / f(x_i)$.
+    \item Генерируется случайное число $r$ \{с использованием генератора, дающего равномерное
+        распределение на отрезке $[0, 1]$\}.
+    \item \label{metropolis_acceptance} Если $r \leq \alpha$, то кандидат принимается (следующее
+        число в последовательности кладётся равным $x_{i + 1} = x'$), в противном случае кандидат
+        отвергается, а следующий элемент нашей марковской цепи полагается равным предыдущему, $x_{i
+        + 1} = x_i$ (таким образом, в нашей последовательности присутствуют повторы, но ничего
+        страшного в этом нет).
+    \item Для генерации следующего числа переходим к пункту~\ref{metropolis_1}, используя $x_{i +
+        1}$ вместо $x_i$.
+\end{enumerate}
+
+\begin{figure}
+	\includegraphics[width=0.8\linewidth]{metropolis.png}
+    \caption{\label{dots-for-monte-carlo}Генерация последовательности случайных чисел в алгоритме
+    Метрополиса.}
+\end{figure}
+
+Из теории цепей Маркова известно, что для того, чтобы распределение чисел цепи сходилось к
+(существующему и единственному) распределению $f(x)$, достаточно выполнения
+условия детального равновесия:
+\begin{equation}
+    \label{metropolis_detailed_balance}
+    P(x' \to x) f(x') = P(x \to x') f(x),
+\end{equation}
+где $P(x_1 \to x_2)$ есть вероятность перехода в марковском процессе из точки $x_1$ в точку $x_2$.
+Очевидно, что для алгоритма Метрополиса можно записать $P(x \to x') = g(x - x') \, A(x \to x')$, где
+$A$ --- вероятность принятия, определяемая шагом~\ref{metropolis_acceptance} и, следовательно,
+равная $A(x \to x') = \min \{1, f(x') / f(x) \}$. Подставляя $A$ и $P$ в
+уравнение~(\ref{metropolis_detailed_balance}), легко убедиться, что оно выполнено.
+
+Таким образом, суть алгоритма Метрополиса состоит в том, что мы заставляем некоторую точку блуждать
+в пространстве случайным образом (но в то же время подчиняясь некоторому закону). При этом на
+каждом шаге от своего текущего положения точка не может отойти дальше, чем <<ширина>> функции $g$.
+Следовательно, если мы выберем $g$ много уже, чем характерная ширина функции $f$, то для того,
+чтобы последовательность $x_i$ <<покрыла>> ширину функции $f$, потребуется очень много шагов. В то
+же время, если мы выберем $g$ гораздо шире, чем $f$, то на большинстве шагов мы получим $x_{i + 1}
+= x_i$. Таким образом, ширина распределения $g$ в оптимальном случае должна быть порядка ширины
+функции $f$.
+
+\textit{Вопрос.} Какой ширины должна быть proposal density в случае $f$, состоящей из двух пиков
+шириной $a$ на расстоянии $b$ друг от друга? Эффективен ли алгоритм Метрополиса в данном случае?
+Что произойдёт, если мы выберем $x_0$ вдали от пиков функции $f$?
+
 \clearpage
 
-\subsubsection{Через обращение $N(x)$}
-
-\subsubsection{Метрополис. Метод имитации отжига.}
+\subsubsection{Метод имитации отжига}
 
 сначала плоская (альтернативный метод), потом любая p.
 
