--- a/lectures.tex
+++ b/lectures.tex
@@ -1018,7 +1018,7 @@ $O$-нотации. Программа должна при запуске выв
 \clearpage
 
 Например, можно написать функцию, поэлементно перемножающую два массива:
-\inputminted{cpp}{mult-arrays.cpp}
+%\inputminted{cpp}{mult-arrays.cpp}
 (не так!!! qwe) При этом, что очень важно, мы избавляемся от ряда возможных ошибок: например, если мы вызовем нашу
 функцию для массивов разной длины, код просто не скомпилируется.
 
@@ -1067,8 +1067,8 @@ $F_{12} = ?$.
 \subsection{RSA шифрование}
 
 Рональд Ривест, Ади Шамир и Леонард Адлеман, MIT. Изучая группы, на которых построен генератор
-Лехмера псевдослучайных чисел, мы получили $a^{p - 1} = 1 \mod p$, если $p$ --- простое число. Для
-произвольного, не простого, числа $n$, верно следующее соотношение:
+Лехмера псевдослучайных чисел, мы получили $a^{p - 1} = 1 \mod p$, если $p$ --- простое число, a $a
+\in [1, ..., (p-1)]$. Для произвольного, не простого, числа $n$, верно следующее соотношение:
 \begin{equation}
     \label{fermat}
     a^{\varphi(n)} = 1 \mod n,
@@ -1124,9 +1124,9 @@ middle не может быть исключена полностью здесь
 В ряде случаев нужно не только зашифровать канал связи, но и скрыть сам факт передачи сообщения от
 Алисы Бобу. Как это сделать, если на маршруте в компьютерной сети между Алисой и Бобом находится
 злоумышленник? Один из вариантов решения проблемы --- луковая маршрутизация (onion routing),
-приближенно сводящаяся к слудующему. Из компьютеров добровольцев создаётся "луковая сеть",
+приближенно сводящаяся к слудующему. Из компьютеров добровольцев создаётся <<луковая сеть>>,
 компьютеры которой дают свои ключи шифрования Алисе. Алиса определяет некоторый квазислучайный
-маршрут через компьютеры луковой сети, для определенности $3--8--2--1--4--7$, и далее к Бобу. К
+маршрут через компьютеры луковой сети, для определенности 3--8--2--1--4--7, и далее к Бобу. К
 своему зашифрованному сообщению она добавляет номер последнего компьютера в маршруте, 7, и шифрует
 это ключом предпоследнего компьютера и т. д. Луковая чешуя. Tor browser. Уязвимости. Важно помнить,
 что если есть хоть какой-то дополнительный канал связи (но достоверный), то препятствовать
@@ -1173,11 +1173,14 @@ int main( ) {
 получаем те же самые $1.5$. Почему так происходит?
 
 Задачи для решения у доски. Написать аналитическое решение для численной схемы Эйлера (ещё один вид
-маятника). Решение: $(x_n, v_n) = (x_0, v_0)_\cdot e^{i \omega n \Delta t}$, что даст
+маятника). Решение: $(x_n, v_n) = (x_0, v_0) \cdot e^{i \omega n \Delta t}$, что даст
 \begin{equation}
     (1 - e^{i \omega \Delta t})^2 = -\Delta t^2.
 \end{equation}
-Дальше можно найти $\omega$ в виде $\omega = \omega_0 + \omega_1 \Delta t + ...$.
+Дальше можно найти $\omega$ в виде $\omega = \omega_0 + \omega_1 ...$, где $\omega_0 = O(1)$ и
+$\omega_1 = O(\Delta t^2)$ (получится, что
+$\omega_0 = 1$, а $\omega_1 = -i \Delta t / 2$? --- имеет отрицательную мнимую часть, что в решении
+даст нарастающую экспоненту).
 
 Таким образом, проблема не просто в точности решения!
 
