--- a/lectures.tex
+++ b/lectures.tex
@@ -1744,6 +1744,43 @@ int main() {
 $<,\; >$. Eq, $==$, Real? (sqrt). Распределить наследование ($+,\; >,\; /,\; \sqrt{}$) для натуральных чисел, рациональных
 чисел, иррациональных чисел, комплексных чисел. (Сплошная математика).
 
+\subsubsection{JSON}
+
+JSON --- популярный текстовый формат. Используется для представления сложных
+структур данных, и обмена ими, например, между браузером и сервером. В научном коде может
+использоваться для описания задачи (конфигурации, начальных условий и т. п.). В JSON данные
+представляются либо как пары ключ--значение, либо как ключ и массив однородных по типу значений,
+либо как JSON-данные. Пример:
+\begin{minted}{cpp}
+    {
+        "name": "Duglas",
+        "age": 70,
+        "address":
+        {
+            "city": "Kyiv"
+            "building": 25
+        },
+        phoneNumbers: [1234, 5678]
+    }
+\end{minted}
+
+Попробуем написать игрушечное представление JSON на C++.
+\inputminted{cpp}{json.cpp}
+
+Для приведения полученного результата к привычному виду с отступами нужна дополнительная работа ---
+вычисление уровня вложенности, переходы на новую строку и т. п.
+
+\textit{Задача}. fizzbuzz через рекурсию.
+Написать функцию, выводящую на экран возрастающую последовательность чисел, делящихся на 7 или на
+11, начиная с 7 и заканчивая 110 (7, 11, 14, 21, 22, ... 110), не используя операцию остатка от
+деления (\mintinline{cpp}{%} и циклы \mintinline{cpp}{for, while}).
+
+    \textit{Задача}. Maybe. Используя наследование, написать тип данных Maybe, который может либо
+    содержать число Some{value), либо не содержать значения, Empty. \mintinline{cpp}{isEmpty(),
+    get_value, Some::Some}.
+
+ЗАДАЧА про поезд???
+
 \subsection{Стандартная библиотека. Std vector.}
 
 std set сначала? qwe
@@ -1956,6 +1993,8 @@ $O(log n)$, в худшем случае --- $O(n)$, но маловероятн
 std map!! qwe
 
 \subsection{Стандартная библиотека. Std set. Std map.}
+
+functionnal init, xcels example
 
 \subsection{SO3}
 
