std::set example

--- a/lectures.tex
+++ b/lectures.tex
@@ -2068,6 +2068,8 @@ $O(log n)$, в худшем случае --- $O(n)$, но маловероятн
 Std set. Хранилище для ключей. Упорядоченное. Обычно реализуется с использованием черно-красных
 деревьев.
 
+\inputminted{cpp}{set.cpp}
+
 Std map. Key-value хранилище.
 \begin{minted}{cpp}
 #include <iostream>
