--- a/lectures.tex
+++ b/lectures.tex
@@ -2359,16 +2359,14 @@ int main() {
 Поддержка потоков появилась в стандарте C++ 2011 года, до этого приходилось
 пользоваться сторонними библиотеками (например, Pthreads).
 
-Поток (thread) --- наименьшая единица обработки, исполнение которой может быть
-назначено ядром операционной системы. Несколько потоков могут существовать в
-рамках одной и той же программы (процесса) и иметь общий доступ к её ресурсам.
-Потоки могут быть использованы для реализации одновременности (concurrency;
-пример --- приложение с графическим интерфейсом, игровой сервер), в том числе на одноядерных
-системах, а также для реальных параллельных вычислений. В последнем случае
-потоки выполняются параллельно на разных процессорах (ядрах). Как правило,
-необходима синхронизация работы потоков. Синхронизация может быть выполнена с
-помощью семафоров (semaphore) и мьютексов (mutex, mutual exclusion) (E.
-Dijkstra, 1963 -- 1965).
+Поток (thread) --- наименьшая единица обработки, исполнение которой может быть назначено ядром
+операционной системы. Несколько потоков могут существовать в рамках одной и той же программы
+(процесса) и иметь общий доступ к её ресурсам.  Потоки могут быть использованы для реализации
+одновременности (concurrency; пример --- cin, или приложение с графическим интерфейсом, игровой
+сервер), в том числе на одноядерных системах, а также для реальных параллельных вычислений. В
+последнем случае потоки выполняются параллельно на разных процессорах (ядрах). Как правило,
+необходима синхронизация работы потоков. Синхронизация может быть выполнена с помощью семафоров
+(semaphore) и мьютексов (mutex, mutual exclusion) (E.  Dijkstra, 1963 -- 1965).
 
 A parallel program is one that uses a multiplicity of computational hardware (e.g., several
 processor cores) to perform a computation more quickly. The aim is to arrive at the answer earlier,
@@ -2537,6 +2535,68 @@ $S$ на единицу, при выходе --- уменьшает, если $S
     return 0;
   }
 \end{minted}
+
+\subsection{openmp, MPI etc??}
+
+\subsection{Блокчейн, криптовалюты, биткоин (BTC)}
+
+Хэш (hash, хэш-сумма).
+
+Хэш-функция переводит массив из бит (файл, структуру в памяти, или просто кусок памяти) в число
+(обычно фиксированной длины, 256 бит, например). На неё накладывается два очень важных условия,
+которые говорят о её "непредсказуемости":
+
+1) Для массивов, отличающихся даже на 1 бит, хэш-суммы должны значительно отличаться.
+
+2) Не существует (или хотя бы неизвестен) алгоритм, позволяющий сгенерировать файл, дающий наперёд
+заданную хэш-сумму.
+
+Таким образом, вероятность того, что хэш какой-то структуры (или массива и т. п.) попадёт в наперёд
+заданный узкий интервал, будет маленькой. Одна из самых известных хэш-функций - sha256
+
+Хэш-чеин (hash chain).
+
+Помните, как устроен односвязный список? Каждый элемент списка помимо значения хранит указатель
+(адрес) следующего элемента списка, тот - следующего за ним, и так до конца. Блокчеин в простейшем
+виде - тот же односвязный список, но в нем каждый следующий элемент ещё хранит хэш предыдущего
+элемента. При этом этот хэш считается от всего элемента, включая ту часть, в которой записан хэш
+элемента перед предыдущим.
+
+Если в обычном списке замена элемента обойдётся в O(1) операций, то в таком простейшем блокчеине
+для замены элемента нужно будет вычислить заново и записать хэш-суммы всех последующих элементов,
+стоить это будет O(N).
+
+Дерево Меркла
+
+Теперь представим двоичное дерево, построенное по несколько похожему принципу. Пусть нижние ноды
+дерева содержат хэши данных (разбитых на блоки), для этих нод попарно вычисляется хэш от суммы (или
+объединения) их хэшей, и так далее, до верхушки. Построение такой структуры выполняется за O(N)
+операций, однако изменение одного блока данных и перестройка дерева будет стоит O(log N). Проверка
+того, что данный блок принадлежит дереву, также дешёвая - для этого достаточно посчитать хэш блока
+и пройтись по нодам снизу вверх, за O(log N).
+
+Proof-of-work
+
+Bitcoin хранит транзакции в дереве Меркла. Транзакции - это переводы средств с одного адреса на
+другой. Очевидно, в этой сети можно легко проверить, что транзакция записана верно, просто вычислив
+цепочку хэшей длиной O(log(N), идя по дереву снизу вверх. Но возникает некоторая проблема - в
+дереве Меркла переписать цепочку нод так же легко. Для того, чтобы переписать или изменить что-либо
+в дереве было практически невозможно, дерево Меркла строится на основе блокчейна.
+
+Блокчейн (blockchain, цепочка блоков) - это тот же хэшчейн (на самом деле часто и то и другое
+называют блокчейном), но каждый элемент списка имеет определённое поле, в котором может быть
+записано что угодно, а на хэши накладывается условие, обеспечивающее сложность вычислений:
+например, требуется, чтобы хэш-сумма не превышала определённого значения. Меняя данные в поле для
+произвольных данных, и пересчитывая хэш, можно подобрать содержимое этого поля таким, что условие
+будет выполнено.
+
+Если пороговое значение для хэша не очень большое, то подбирать данные для произвольного поля
+придётся достаточно долго. В то же время на сложности проверки блокчейна все эти условия и
+дополнительные поля никак не сказываются.
+
+Майнинг - это и есть перебор чисел в свободном блоке и вычисление хэшей. Поскольку эта операция
+затратная, но необходимая для работы сети (без неё не записать транзакции), то он оплачивается -
+теми же биткоинами.
 
 \subsection{Сортировка слиянием.}
 
